# universal_huecode

./: README.md  config.yaml
src/: CMakeLists.txt
src/include/common/: detection_visualizer.hpp  objects.hpp  result_object.hpp
src/include/detectors/: aruco_detector.hpp  qr_opencv_detector.hpp  qr_zbar_detector.hpp
src/include/recognition/: online_remapper.hpp  recognition_universal_huecode.hpp
src/main/: detect.cpp
